Add basic HTML format
Co-authored-by: Thomas Friedrichs <friedrichs.tommy@gmail.com
>
Co-authored-by: Thomas Russell <t.p.russell19@gmail.com>
Co-authored-by: Carlos Mendez <carlosmendez86@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <h1>Dog Park Finder</h1>
+    <p>Enter a zipcode and find a park near you!</p>
+    <form id="form">
+      <label for="zip">Enter your zipcode:</label>
+      <input type="text" id="zipcode">
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+  </div>
 </body>
 
 </html>
