--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dog Park Finder</title>
 </head>
 
 <body>
@@ -14,8 +14,8 @@
     <p>Enter a zipcode and find a park near you!</p>
     <form id="form">
       <label for="zip">Enter your zipcode:</label>
-      <input type="text" id="zipcode">
-      <button type="submit" class="btn btn-success">Submit</button>
+      <input type="number" id="zipcode">
+      <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
   </div>
 </body>
