--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
   </div>
+  <div id="results">
+
+  </div>
 </body>
 
 </html>
