Add styling to the'
Co-authored-by: Thomas Russell <t.p.russell19@gmail.com>
Co-authored-by: Carlos Mendez <carlosmendez86@gmail.com>
Co-authored-by: Thomas Friedrichs <friedrichs.tommy@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <h1>Dog Park Finder</h1>
+    <h1 class="jumbotron">Dog Park Finder</h1>
     <p>Enter a zipcode and find a park near you!</p>
     <form id="form">
       <label for="zip">Enter your zipcode:</label>
@@ -18,8 +18,7 @@
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
   </div>
-  <div id="results">
-
+  <div id="results" class="card-columns container">
   </div>
   <div id="photo-div"></div>
 </body>
